--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
     "babel-node": "0.0.1-security",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "bcrypt": "^4.0.1",
     "graphql": "^15.0.0",
+    "graphql-tools": "^4.0.7",
     "lodash": "^4.17.15",
     "mongodb": "^3.5.5",
     "mongoose": "^5.9.7",
+    "mongoose-dummy": "^1.0.8",
     "nodemon": "^2.0.3"
   },
   "devDependencies": {
