--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "bcrypt": "^4.0.1",
+    "dotenv": "^8.2.0",
     "graphql": "^15.0.0",
     "graphql-tools": "^4.0.7",
     "lodash": "^4.17.15",
